# SPKG-Simulation-Pipeline-Kitchen-Gym

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/kitchen_min/: README.md
examples/: golden_kitchen.scenespec.json
schemas/: scenespec.schema.json
spkg/: __init__.py  cli.py
spkg/core/: __init__.py  layer_composer.py  resolver.py  stage_manager.py
spkg/llm/: __init__.py
spkg/physics/: __init__.py
spkg/replicator/: __init__.py
spkg/semantics/: __init__.py
spkg/validator/: __init__.py  engine.py
spkg/validator/rules/: __init__.py
tests/: __init__.py  test_resolver.py  test_schema.py
