[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spkg"
version = "0.1.0"
description = "Simulation-Pipeline Kitchen Gym: LLM → SceneSpec → USD → Physics Validation → Isaac Sim"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "HSAD" },
]
keywords = ["usd", "openusd", "isaac-sim", "simulation", "physics", "validation", "digital-twin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "google-generativeai>=0.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
spkg = "spkg.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
